API request connected to DB
GET,PUT,POST,DELETE request for Tutor added
