# controllers/Tutor.js
@@ -3,14 +3,17 @@
 var utils = require('../utils/writer.js');
 var Tutor = require('../service/TutorService');
 
-module.exports.addTutor = function addTutor (req, res, next) {
+module.exports.postTutor = function addTutor (req, res, next) {
   var body = req.swagger.params['body'].value;
-  Tutor.addTutor(body)
+
+  var name=body.name;
+
+  Tutor.postTutor(name)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, utils.respondWithCode(response.statusCode,response));
     });
 };
 
@@ -21,24 +24,29 @@ module.exports.deleteTutor = function deleteTutor (req, res, next) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, utils.respondWithCode(response.statusCode,response));
     });
 };
 
-module.exports.editTutor = function editTutor (req, res, next) {
+module.exports.putTutor = function putTutor (req, res, next) {
   var tutorID = req.swagger.params['TutorID'].value;
-  Tutor.editTutor(tutorID)
+  var body=req.swagger.params['body'].value;
+  var name=body.name||null;
+
+  Tutor.putTutor(tutorID,name)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, rutils.respondWithCode(response.statusCode,response));
     });
 };
 
 module.exports.getTutor = function getTutor (req, res, next) {
+
   var tutorID = req.swagger.params['TutorID'].value;
-  Tutor.getTutor(tutorID)
+
+  var response = Tutor.getTutor(tutorID)
     .then(function (response) {
       utils.writeJson(res, response);
     })
