# service/TutorService.js
@@ -9,18 +9,27 @@ var errorApi = require("../utils/error");
  * body Tutor 
  * returns Tutor
  **/
-exports.addTutor = function(body) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "name" : "name"
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
+exports.postTutor = function(name) {
+  return new Promise(function(resolve,reject){
+    console.log(database.postTutor);
+    database.postTutor(name)
+    .then(resolve)
+    .catch(function(e){
+      switch(e.statusCode){
+        case database.errors.DATABASE_ERROR:
+        //remove database specific error - will leak information
+        reject(errorApi.create500Error("Something terrible happened with the database. Sorry..."));
+        break;
+        case database.errors.INTERNAL_ERROR:
+        reject(errorApi.create500Error(e.message));
+        break;
+        case database.errors.PARAMETER_ERROR:
+        reject(errorApi.create400Error(e.message));
+        break;
+      }
+    })
+    
+  })
 }
 
 
@@ -32,7 +41,28 @@ exports.addTutor = function(body) {
  **/
 exports.deleteTutor = function(tutorID) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    database.deleteTutor(tutorID)
+      .then(function (result){
+        if(result){ //row count>0
+          resolve(result);
+        } else{
+          reject(errorApi.create404Error("Couldn't find anything matching the request URI."));
+        }
+      })
+      .catch(function(e){
+        switch(e.statusCode){
+          case database.errors.DATABASE_ERROR:
+          //remove database specific error - will leak information.
+          reject(errorApi.create500Error("Something terrible happened with the database. Sorry..."));
+          break;
+          case database.errors.INTERNAL_ERROR:
+          reject(errorApi.create500Error(e.message));
+          break;
+          case database.errors.PARAMETER_ERROR:
+          reject(errorApi.create400Error(e.message));
+          break;
+        }
+      })
   });
 }
 
@@ -41,11 +71,27 @@ exports.deleteTutor = function(tutorID) {
  * Stores a tutor
  *
  * tutorID String 
- * no response value expected for this operation
+ * body Tutor
+ * returns Tutor
  **/
-exports.editTutor = function(tutorID) {
+exports.putTutor = function(tutorID,name) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    database.putTutor(tutorID,name)
+      .then(resolve)
+      .catch(function(e){
+        switch (e.statusCode){
+          case database.errors.DATABASE_ERROR:
+          //remove database specific error - will leak information.
+          reject(errorApi.create500Error("Something terrible happened with the database. Sorry..."));
+          break;
+          case database.errors.INTERNAL_ERROR:
+          reject(errorApi.create500Error(e.message));
+          break;
+          case database.errors.PARAMETER_ERROR:
+          reject(errorApi.create400Error(e.message));
+          break;
+        }
+      })
   });
 }
 
@@ -58,7 +104,28 @@ exports.editTutor = function(tutorID) {
  **/
 exports.getTutor = function(tutorID) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    database.getTutor(tutorID)
+    .then(function(result){
+      if(result && result.length>0){
+        resolve(result);
+      } else {
+        reject(errorApi.create404Error("Couldn't find anything matching the request URI."));
+      }
+    })
+    .catch(function (e){
+      switch (e.statusCode){
+        case database.errors.DATABASE_ERROR:
+          //remove database specific error - will leak information.
+          reject(errorApi.create500Error("Something terrible happened with the database. Sorry..."));
+          break;
+        case database.errors.INTERNAL_ERROR:
+          reject(errorApi.create500Error(e.message));
+          break;
+        case database.errors.PARAMETER_ERROR:
+          reject(errorApi.create400Error(e.message));
+          break;
+      }
+    })
   });
 }
 
